[project]
name = "SMA_REACT"
version = "1.0.0"
description = "SMA_REACT package"
authors = [{name = "Patrick Walgren and Jacob Mingear"}]
readme = "README.md"
license = "BSD-3-Clause"
license-files = "LICENSE"
keywords = ["Shape Memory Alloys", "Constitutive Model", "Calibration", "SMA"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Science/Research"
  "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9, <3.13"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "pyqt5==5.15.10",
    "scikit-learn",
    "scipy",
    "deap"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["SMA_REACT_GUI", "src", "src.*"]

[tool.setuptools.package-data]
"src.preprocessor.media" = ["*.png"]

[project.scripts]
sma-react-preprocessor = "SMA_REACT_GUI.preprocessor_GUI:main_cli"
sma-react-calibration = "SMA_REACT_GUI.calibration_GUI:main_cli"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

#[build-system]
#requires = ["flit_core >=3.2,<4"]
#build-backend = "flit_core.buildapi"

[project.urls]
Homepage = "https://github.com/maestrolab/SMA_REACT"
Documentation = "https://sma-react.readthedocs.io/en/latest/"
Repository = "https://github.com/maestrolab/SMA_REACT.git"
Issues = "https://github.com/maestrolab/SMA_REACT/issues"


